The second part brushing-up

--- a/2021-02-22-life-begins-at-40.org
+++ b/2021-02-22-life-begins-at-40.org
@@ -468,543 +468,166 @@ might seem fairly banal and I think it probably is but it's it's a
 it's a twisting on its head of the concerns of midlife midlife Reggie
 parens looking back and saying I haven't achieved anything I've got
 nothing left to look forward to what Pitkin is saying is yes you have
-even at
-
-the age of 40 you're going to have 20 30
-
-40 years of your life still make the
-
-most of it and the way you made the most
-
-of it according to Pitkin was that you
-
-pursue self fulfillment through material
-
-improvement leisure and what he called
-
-the art of living much less work more
-
-leisure more play
-
-this process of self-fulfillment would
-
-make those last 30 or 40 years
-
-worthwhile no longer the downward curve
-
-no longer the acceleration towards death
-
-but in fact a fulfilling middle-aged and
-
-older age and this notion became widely
-
-adopted in two particular ways one is
-
-that it was taken as a strategy for
-
-personal renewal this is a way in which
-
-we could refresh and renew ourselves
-
-when we were getting jaded and faded in
-
-middle age begin to realize that there
-
-were things to look forward to that it
-
-was possible to reshape to Ramola life
-
-in more positive ways but the key part
-
-of this and again thinking about this in
-
-social and cultural historical terms the
-
-key part of this it's this this story
-
-that Pitkin was telling was not just
-
-about individuals of discovering
-
-themselves it was also a lesson a
-
-message for populations certainly in
-
-America and Britain during a period of
-
-economic depression during a period of
-
-recession increasingly concerned about
-
-the specter of a second world war during
-
-a period of doom and gloom that if we
-
-reinvigorated ourselves there was hope
-
-for optimism and pickins argument was
-
-that if people as they got older the
-
-middle-aged and the elderly work less
-
-and had more leisure there would be more
-
-job opportunities for younger people
-
-which would boost the economy equally if
-
-people in middle age and older age spent
-
-their money buying things enjoying
-
-themselves purchasing leisure for
-
-example and pleasure that would also
-
-boost the economy so part of the appeal
-
-of pickins work was that it struck a
-
-chord in individuals like Reggie Peron
-
-who were struggling with their own
-
-problems but it also meant something to
-
-a Western world struggling with the
-
-effects of economic recession because it
-
-promised a way out of them and in some
-
-ways a pick in writing in the 30s the
-
-1930s were a strangely paradoxical
-
-period a period of
-
-morbid gloom in some kind of ways
-
-because of the recession and because of
-
-the fear of another global war but it
-
-was also a period of incredible optimism
-
-it was the period when the American
-
-Dream was conceived and the American
-
-Dream first appeared in the work of
-
-James Truslow Adams in 1931 the year
-
-before Pitkin published life begins at
-
-40 and it's in the epilogue to this
-
-fantastic overview the epic of America
-
-and in that epilogue he tries to sketch
-
-out the future to move away from some of
-
-the doom and gloom of the interwar
-
-period to say life globally as well as
-
-individually doesn't have to go down
-
-towards death and destruction it can go
-
-the other way and for Adams the American
-
-Dream was not a dream simply of
-
-motorcars and high wages so it's not
-
-just a material dream but a dream of a
-
-social order in which each man and woman
-
-shall be able to attain to the fullest
-
-statue of which they're innately capable
-
-and be recognized by others for what
-
-they are regardless of the fortuitous
-
-circumstances of birth or position so
-
-this was Adams dream and it was a dream
-
-in a sense that resonated very clearly
-
-with what Pitkin was saying we didn't
-
-have to be depressed at midlife and the
-
-middle of the 20th century either we
-
-could look forward with some hope for
-
-this to happen
-
-Adams argued we needed to develop a new
-
-scale and basis for values for Adams
-
-looking forward to the to achieving the
-
-American dream
-
-that meant collectivity trust love
-
-working together to make a better world
-
-so here was this period of economic
-
-recession Pitkin saying yes life can
-
-begin at 40 Adams saying in fact there
-
-is an American dream that we should work
-
-towards in some ways of course what
-
-happened was the opposite those hopes
-
-and those dreams were dashed
-
-they were dashed by the second
-
-World War they were dashed by the
-
-catastrophe of global conflict and they
-
-were dashed in many ways by what
-
-happened afterwards in terms of the Cold
-
-War that sense of optimism that could
-
-create security or the sense of security
-
-that could create optimism they were
-
-dashed during the Second World War and
-
-afterwards what was left of pickins
-
-mantra and Adams dream was simply a
-
-dream of material Plenty the values the
-
-scale the basis of values that dream of
-
-social order that was democratic and
-
-egalitarian Equal Opportunities
-
-occupationally and educationally that
-
-was shattered by experiences in the
-
-second world what was left was the dream
-
-of motorcars and high wages people were
-
-left feeling that they could not achieve
-
-those other
-
-grandiose aspirations that Pitkin and
-
-Adams had set out instead what they
-
-tended to do was search for happiness
-
-and a hurry this is a wonderful book by
-
-Edmund burglar the revolt of the
-
-middle-aged man
-
-published in in 1958 that Edmund burglar
-
-was an American psychoanalyst who had a
-
-very extensive clinic and he drew on his
-
-clinical experience to write about a
-
-whole variety of challenges relating to
-
-marriage middle age and midlife in
-
-particular in relation to men he has a
-
-lovely book published in 1948 saying
-
-divorce won't help if anybody is
-
-interested and his argument in fact in
-
-that book and in this book is that
-
-before a couple run to the divorce
-
-lawyer they should go and see a
-
-psychiatrist that this is about the
-
-challenges within themselves and their
-
-relationships so what he says is that is
-
-that during the 40s and 50s the collapse
-
-of the American Dream in many ways and
-
-you can trace it through American
-
-post-war literature as well in
-
-particular the collapse of the dream
-
-left people struggling and they
-
-translated those struggles or those
-
-aspirations into a dream of material
-
-Plenty into consumption seduced by the
-
-pleasure of consuming material goods but
-
-also the pleasure the anticipation of
-
-consuming our
-
-the people this was the emergence if you
-
-like of a form of narcissistic self
-
-fulfillment that drove some of the
-
-behavior that you see in in Reggie Peron
-
-so burglar four burglar people were
-
-looking for happiness in a hurry and he
-
-has this beautiful passage which
-
-describes very very clearly the thought
-
-processes that he attributes to people
-
-like Reggie Perry in this mindset
-
-stressed by life circumstances feeling
-
-that they had failed feeling that
-
-although they were looking down to death
-
-everybody was telling them that life
-
-begins at fourteen things should be
-
-getting better at that moment they were
-
-anxious and backed more depressed than
-
-they would have been otherwise and this
-
-is the this is the mindset if you like
-
-of a Reggie Peron
-
-I want happiness love approval
-
-admiration sex youth all this is denied
-
-me in this stale marriage to an elderly
-
-sickly complaining nagging wife let's
-
-get rid of her start Life all over again
-
-with another woman sure I'll provide for
-
-my first wife and children sure I'm
-
-sorry the first marriage didn't work out
-
-but self defense comes first I just have
-
-to save myself so what is left of those
-
-aspirations in the midst of midlife
-
-middle-age stress the argument that life
-
-should be getting better not worse that
-
-optimism that we could achieve the
-
-American dreams that was dashed what was
-
-left was a sense of selfish narcissistic
-
-belief that we would do something some
-
-happiness ourselves and this burglar
-
-suggested was why people like Reggie
-
-Peron had crises pushed from their
-
-marriages pushed from their
-
-relationships disappointed in their
-
-lives but seduced by a dream that was no
-
-longer achievable except through the
-
-selfish pursuit of pleasure
-
-let me reflect then to finish on where
-
-we've been
-
-Reggie Peron in some ways spoke for a
-
-generation
-
-he was an everyman if you like and his
-
-wife and children every day victims of
-
-the kinds of pressures that people and
-
-families were under in the 50s 60s and
-
-70s we can certainly understand his
-
-behavior that random impulsive
-
-destructive behavior as the product of
-
-psychological despair I've hit my peak
-
-I've reached my prime but it no longer
-
-means anything because all I look
-
-forward to is the downward curve of life
-
-and death as that sense of an identity
-
-crisis that is captured very very neatly
-
-by David knobs but also you can see it
-
-in other literary and cinematic forms as
-
-well in the fifties sixties and
-
-seventies all we can read it in
-
-biological terms we can say that pairing
-
-is aging he's losing his virility he's
-
-losing his hair he's losing muscle mass
-
-and energy and that leads him into a
-
-crisis of despair as well linked to
-
-death but not entirely the same we can
-
-see this in individual terms this is a
-
-man behaving strangely
-
-what I want to suggest though is that we
-
-cannot understand Reggie unless we cast
-
-our lens wider than that unless we zoom
-
-out to see the social and the cultural
-
-conditions in which Reggie Peron was
-
-living and in which we continue to live
-
-in some ways so there are perhaps two
-
-conclusions that I want to make the
-
-first is that we are aged Reggie us we
-
-are aged not just by our minds and
-
-bodies but we are also aged by history
-
-by the cultural values the attitudes
-
-that beliefs the norms the practices
-
-that we have inherited from the past
-
-some ways Reggie Perry in the late
-
-seventies
-
-went off the rails because of what had
-
-happened in the 1950s and 60s
-
-both in terms of the life course end in
-
-terms of the seduction of materialism
-
-the second point is this that in that
-
-context when we are saying that we're
-
-aged by history and culture within that
-
-context the midlife crisis is no longer
-
-the biological the natural phenomenon
-
-the inevitable phenomenon of aging it is
-
-immediately a social and a cultural
-
-phenomenon the midlife crisis that
-
-Reggie suffered from that we perhaps
-
-continue to suffer from is a set of
-
-experiences that is generated by
-
-historical change shaped by cultural
-
-contexts and social economic conditions
-
-and determined also by political
-
-contingencies thank you
-
-[Applause]
-
+even at the age of 40 you're going to have 20 30 40 years of your life
+still make the most of it and the way you made the most of it
+according to Pitkin was that you pursue self fulfillment through
+material improvement leisure and what he called the art of living much
+less work more leisure more play.
+
+
+This process of self-fulfillment would make those last 30 or 40 years
+worthwhile no longer the downward curve no longer the acceleration
+towards death but in fact a fulfilling middle-aged and older age and
+this notion became widely adopted in two particular ways one is that
+it was taken as a strategy for personal renewal this is a way in which
+we could refresh and renew ourselves when we were getting jaded and
+faded in middle age begin to realize that there were things to look
+forward to that it was possible to reshape to Ramola life in more
+positive ways but the key part of this and again thinking about this
+in social and cultural historical terms the key part of this it's this
+this story that Pitkin was telling was not just about individuals of
+discovering themselves it was also a lesson a message for populations
+certainly in America and Britain during a period of economic
+depression during a period of recession increasingly concerned about
+the specter of a second world war during a period of doom and gloom
+that if we reinvigorated ourselves there was hope for optimism and
+pickins argument was that if people as they got older the middle-aged
+and the elderly work less and had more leisure there would be more job
+opportunities for younger people which would boost the economy equally
+if people in middle age and older age spent their money buying things
+enjoying themselves purchasing leisure for example and pleasure that
+would also boost the economy so part of the appeal of pickins work was
+that it struck a chord in individuals like Reggie Peron who were
+struggling with their own problems but it also meant something to a
+Western world struggling with the effects of economic recession
+because it promised a way out of them and in some ways a pick in
+writing in the 30s the 1930s were a strangely paradoxical period a
+period of morbid gloom in some kind of ways because of the recession
+and because of the fear of another global war but it was also a period
+of incredible optimism it was the period when the American Dream was
+conceived and the American Dream first appeared in the work of James
+Truslow Adams in 1931 the year before Pitkin published life begins at
+40 and it's in the epilogue to this fantastic overview the epic of
+America and in that epilogue he tries to sketch out the future to move
+away from some of the doom and gloom of the interwar period to say
+life globally as well as individually doesn't have to go down towards
+death and destruction it can go the other way and for Adams the
+American Dream was not a dream simply of motorcars and high wages so
+it's not just a material dream but a dream of a social order in which
+each man and woman shall be able to attain to the fullest statue of
+which they're innately capable and be recognized by others for what
+they are regardless of the fortuitous circumstances of birth or
+position.
+
+
+So this was Adams dream and it was a dream in a sense that resonated
+very clearly with what Pitkin was saying we didn't have to be
+depressed at midlife and the middle of the 20th century either we
+could look forward with some hope for this to happen Adams argued we
+needed to develop a new scale and basis for values for Adams looking
+forward to the to achieving the American dream that meant collectivity
+trust love working together to make a better world so here was this
+period of economic recession Pitkin saying yes life can begin at 40
+Adams saying in fact there is an American dream that we should work
+towards in some ways of course what happened was the opposite those
+hopes and those dreams were dashed they were dashed by the second
+World War they were dashed by the catastrophe of global conflict and
+they were dashed in many ways by what happened afterwards in terms of
+the Cold War that sense of optimism that could create security or the
+sense of security that could create optimism they were dashed during
+the Second World War and afterwards what was left of pickins mantra
+and Adams dream was simply a dream of material Plenty the values the
+scale the basis of values that dream of social order that was
+democratic and egalitarian Equal Opportunities occupationally and
+educationally that was shattered by experiences in the second world
+what was left was the dream of motorcars and high wages people were
+left feeling that they could not achieve those other grandiose
+aspirations that Pitkin and Adams had set out instead what they tended
+to do was search for happiness and a hurry this is a wonderful book by
+Edmund burglar the revolt of the middle-aged man published in in 1958
+that Edmund burglar was an American psychoanalyst who had a very
+extensive clinic and he drew on his clinical experience to write about
+a whole variety of challenges relating to marriage middle age and
+midlife in particular in relation to men.
+
+
+He has a lovely book published in 1948 saying divorce won't help if
+anybody is interested and his argument in fact in that book and in
+this book is that before a couple run to the divorce lawyer they
+should go and see a psychiatrist that this is about the challenges
+within themselves and their relationships so what he says is that is
+that during the 40s and 50s the collapse of the American Dream in many
+ways and you can trace it through American post-war literature as well
+in particular the collapse of the dream left people struggling and
+they translated those struggles or those aspirations into a dream of
+material Plenty into consumption seduced by the pleasure of consuming
+material goods but also the pleasure the anticipation of consuming our
+the people this was the emergence if you like of a form of
+narcissistic self fulfillment that drove some of the behavior that you
+see in in Reggie Peron so burglar four burglar people were looking for
+happiness in a hurry and he has this beautiful passage which describes
+very very clearly the thought processes that he attributes to people
+like Reggie Perry in this mindset stressed by life circumstances
+feeling that they had failed feeling that.
+
+
+
+Although they were looking down to death everybody was telling them
+that life begins at fourteen things should be getting better at that
+moment they were anxious and backed more depressed than they would
+have been otherwise and this is the this is the mindset if you like of
+a Reggie Peron I want happiness love approval admiration sex youth all
+this is denied me in this stale marriage to an elderly sickly
+complaining nagging wife let's get rid of her start Life all over
+again with another woman sure I'll provide for my first wife and
+children sure I'm sorry the first marriage didn't work out but self
+defense comes first I just have to save myself so what is left of
+those aspirations in the midst of midlife middle-age stress the
+argument that life should be getting better not worse that optimism
+that we could achieve the American dreams that was dashed what was
+left was a sense of selfish narcissistic belief that we would do
+something some happiness ourselves and this burglar suggested was why
+people like Reggie Peron had crises pushed from their marriages pushed
+from their relationships disappointed in their lives but seduced by a
+dream that was no longer achievable except through the selfish pursuit
+of pleasure.
+
+
+
+Let me reflect then to finish on where we've been Reggie Peron in some
+ways spoke for a generation he was an everyman if you like and his
+wife and children every day victims of the kinds of pressures that
+people and families were under in the 50s 60s and 70s we can certainly
+understand his behavior that random impulsive destructive behavior as
+the product of psychological despair I've hit my peak I've reached my
+prime but it no longer means anything because all I look forward to is
+the downward curve of life and death as that sense of an identity
+crisis that is captured very very neatly by David knobs but also you
+can see it in other literary and cinematic forms as well in the
+fifties sixties and seventies all we can read it in biological terms
+we can say that pairing is aging he's losing his virility he's losing
+his hair he's losing muscle mass and energy and that leads him into a
+crisis of despair as well linked to death but not entirely the same we
+can see this in individual terms this is a man behaving strangely.
+
+
+
+What I want to suggest though is that we cannot understand Reggie
+unless we cast our lens wider than that unless we zoom out to see the
+social and the cultural conditions in which Reggie Peron was living
+and in which we continue to live in some ways so there are perhaps two
+conclusions that I want to make the first is that we are aged Reggie
+us we are aged not just by our minds and bodies but we are also aged
+by history by the cultural values the attitudes that beliefs the norms
+the practices that we have inherited from the past some ways Reggie
+Perry in the late seventies went off the rails because of what had
+happened in the 1950s and 60s both in terms of the life course end in
+terms of the seduction of materialism the second point is this that in
+that context when we are saying that we're aged by history and culture
+within that context the midlife crisis is no longer the biological the
+natural phenomenon the inevitable phenomenon of aging it is
+immediately a social and a cultural phenomenon the midlife crisis that
+Reggie suffered from that we perhaps continue to suffer from is a set
+of experiences that is generated by historical change shaped by
+cultural contexts and social economic conditions and determined also
+by political contingencies thank you [Applause]
