Primal testing elaboration

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -1196,18 +1196,13 @@ tags: [book, template]
      import unittest  # <-- import header
 
      """The place below an import section reserved for multi-line comments
-     which might be utilized as preamble to your Python program. It is
+     which might be utilized as a preamble to your Python program. It is
      being red only by humans, not compiled ever, and permits author to
      write down all stuff necessary to be at the foremost place.
 
      It might be unnecessary in our case, when we write a simplified
-     version of programs. But our aim is a paragon of clarity thus it
-     should contain all lucidity's attributes.
-
-     You might notice that /coding definition/ on the first string, the
-     second string begins with tripled double quotes and a sentence there.
-     They are the obligatory attributes if you have intention to do things
-     as it should do.
+     version of programs. But our basic aim is to serve as paragon of
+     clarity thus it should contain all lucidity's attributes.
 
      By its purpose all programming languages should allow readers to
      perceive what exactly this particular text do in a much explicit
