An initial sentences detection

--- a/2021-02-22-life-begins-at-40.org
+++ b/2021-02-22-life-begins-at-40.org
@@ -16,70 +16,70 @@ tags: [mid-age, vocabulary]
 
 
 Thank you John for those very kind words it's an absolute pleasure to
-be here tonight it's an honor to be speaking at the Royal Society so
-thank you very much for inviting me I have to say that I had not
+be here tonight. It's an honor to be speaking at the Royal Society so
+thank you very much for inviting me. I have to say that I had not
 expected so many people to be here so thank you very much for coming
 as well we know particularly at the Royal Society that in terms of
-knowledge production we always stand on the shoulders of giants there
+knowledge production we always stand on the shoulders of giants. There
 are always people who have gone before us but there are people who
-walk beside us on whom we depend as well
+walk beside us on whom we depend as well.
 
 And before I start I want to thank three institutions the first is the
-Wellcome Trust the Wellcome Trust has funded a large proportion of my
+Wellcome Trust. The Wellcome Trust has funded a large proportion of my
 research and my research career from the very early stages converting
 from a doctor into a an early career researcher throughout various
 larger program grant strategic awards and more recently the trust has
 supported the creation of the Welcome Center for cultures and
-environments of Health in many ways for me this was the fulfillment of
-a dream although at times the responsibilities and demands seemed more
-like a nightmare but it's a fantastic opportunity and I'm deeply
+environments of Health. In many ways for me this was the fulfillment
+of a dream although at times the responsibilities and demands seemed
+more like a nightmare but it's a fantastic opportunity and I'm deeply
 grateful for the trust for the funding and it's nice that Simon
-Chaplin is here as well so thank you for coming I'm also a deeply
-fortunate that I have worked at the University of Exeter for over 20 years.
-
+Chaplin is here as well. So thank you for coming I'm also a deeply
+fortunate that I have worked at the University of Exeter for over 20
+years.
 
 We know from the tag line the Dexter is probably the best university
 in the world and for me it has been fantastic a place to grow as an
-academic a place to develop to try out new ideas the senior management
-at the University Steve Smith the vice chancellor Janice Kay the
-Provost Nick told that before he left and now Neil gal that senior
-group leading the University have been fantastic they have supported
-and encouraged me and been prepared to take a risk or two to support
-one or two of my more grandiose ideas I also want to thank Andrew
-Thorp who is the Dean of the College of Humanities has been fantastic
-a scholar and friend for many many years the final institution but I
-want to thank is the institution that is my
-family.
+academic a place to develop to try out new ideas. The senior
+management at the University Steve Smith the vice chancellor Janice
+Kay the Provost Nick told that before he left and now Neil gal that
+senior group leading the University have been fantastic. They have
+supported and encouraged me and been prepared to take a risk or two to
+support one or two of my more grandiose ideas. I also want to thank
+Andrew Thorp who is the Dean of the College of Humanities has been
+fantastic a scholar and friend for many many years the final
+institution but I want to thank is the institution that is my family.
 
 I didn't get where I am today without my wife Siobhan wonderfully
 loyal faithful tolerant of my own crises throughout our marriage our
-three children Kiera rhythm and Connell the best children these
-together are the why and the how of my life so thank you it may seem
+three children Kiera rhythm and Connell. The best children these
+together are the why and the how of my life. So thank you. It may seem
 strange to be standing in the Royal Society giving a lecture about a
-subject like the midlife crisis this is an institution renowned for
+subject like the midlife crisis. This is an institution renowned for
 its world leading scientific research but I hope that what I have to
 say will do justice to the three figures after whom this lecture is
-named John Wilkins of course a natural philosopher a polymath one of
-the founders of the society John Desmond Bernal an Irish scientist
+named. John Wilkins of course a natural philosopher a polymath one of
+the founders of the society, John Desmond Bernal an Irish scientist
 renowned for his work in x-ray crystallographer crystallography in
 molecular biology but also a very committed and prolific historian of
-science interested in the relationship between science and society
+science interested in the relationship between science and society.
 Peter Medawar really most famous for his work on immunological
-tolerance for which he received the Nobel Prize in 1960 what is less
-well known about Medawar work he was also interested in aging aging as
-an unsolved biological problem as he put it in his inaugural lecture
-in 1951 and one of the terms that Medawar used to describe the aging
-process was senescence and that concept of senescence had been
+tolerance for which he received the Nobel Prize in 1960. What is less
+well known about Medawar work he was also interested in aging. Aging
+as an unsolved biological problem as he put it in his inaugural
+lecture in 1951 and one of the terms that Medawar used to describe the
+aging process was senescence. And that concept of senescence had been
 popularized by an American psychologist Grandville Stanley Hall in the
-early 20th century and it came to be one of the key ways in which
+early 20th century. And it came to be one of the key ways in which
 midlife and middle-age was defined during the early 20th century
-middle-age came to represent the period between adolescence and senescence.
+middle-age came to represent the period between adolescence and
+senescence.
 
 
 And that's why many people refer to it as middle essence middle-aged
-as middle essence so although it's a strange subject to be talking
+as middle essence. So although it's a strange subject to be talking
 about at the Royal Society I hope that it will do justice to these
-three figures here after whom the lecture is named let me take you
+three figures here after whom the lecture is named. Let me take you
 back and some of you will remember this let me take you back to the
 late 1970s so an iconic sitcom television series on BBC the fallen
 rise of Reginald Perrin starring Leonard Rossiter and the television
