--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -1310,6 +1310,19 @@ tags: [book, template]
 
      import unittest
 
+     """If in previous tests we were introduced by three test methods only:
+
+      - assertFalse();
+      - assertTrue();
+      - assertIsNone();
+
+     Right now it is a right time to show several additional ones:
+
+      - assertIs();
+      - assertIsNotNone();
+      - assertNotEqual(); 
+     """
+
 
      class TestCompareFundamentals(unittest.TestCase):
 
